<resources>
    <string name="app_name">GPSCompass</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="temp_c">°C</string>
    <string name="temp_f">°F</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="weather">Weather</string>
    <string name="map">Map</string>
    <string name="text_address_found">Address not found</string>
    <string name="text_no_address_found">Address not found</string>
    <string name="text_invalid_lat_long_used">Invalid lat long used</string>
    <string name="noti_service_not_available">Service Not Available</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="text_direction">%d° %s</string>
    <string name="accept_privacy"><![CDATA[Accept & Privacy]]></string>
    <string name="compass">Compass</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="accept_private_policy">By proceeding you agree with our</string>
    <string name="address">Address</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="error_loading_page">An error occurred, please try again later</string>
    <string name="data_empty">Data is empty!</string>
    <string name="search">Search</string>
    <string name="banner_id_1">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_id_1">ca-app-pub-3940256099942544/1033173712</string>
    <string name="o_interstitial_id_1">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_id_1">ca-app-pub-3940256099942544/2247696110</string>
</resources>