<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center"
    tool:context=".MainActivity">

    <com.bcg.gpscompass.ui.view.CompassImageView
        android:id="@+id/iv_compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_compass" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_compass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:maxLines="2"
        android:ellipsize="marquee"
        android:textColor="@color/white"
        android:layout_marginBottom="44dp"
        android:layout_marginTop="44dp"
        android:paddingLeft="44dp"
        android:paddingRight="44dp"
        android:textSize="20sp"
        android:textStyle="bold"
        tool:text="Hà nội" />

    <RelativeLayout
        android:id="@+id/rl_components"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_address"
        android:gravity="center">

        <ImageButton
            android:id="@+id/btn_location_compass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="12dp"
            android:background="@drawable/background_button_rectangle"
            android:contentDescription="@string/location"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            app:srcCompat="@drawable/ic_location" />

        <ImageButton
            android:id="@+id/btn_weather_compass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_toEndOf="@id/btn_location_compass"
            android:background="@drawable/background_button_rectangle"
            android:contentDescription="@string/weather"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            app:srcCompat="@drawable/ic_weather" />

        <ImageButton
            android:id="@+id/btn_map_compass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_toEndOf="@id/btn_weather_compass"
            android:background="@drawable/background_button_rectangle"
            android:contentDescription="@string/map"
            android:paddingStart="16dp"
            android:paddingTop="12dp"
            android:paddingEnd="16dp"
            android:paddingBottom="12dp"
            app:srcCompat="@drawable/ic_map" />
    </RelativeLayout>
</RelativeLayout>